force-app/main/default/objects/KM_Entry__c/KM_Entry__c.object-meta.xml
<CustomObject>
    <label>KM Entry</label>
    <nameField>
        <displayFormat>KM-{00000000}</displayFormat>
        <label>KM Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KM Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>