force-app/main/default/objects/KM_Entry__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date of Travel</label>
    <required>true</required>
    <type>Date</type>
</CustomField>