force-app/main/default/objects/KM_Entry__c/fields/End_KM__c.field-meta.xml
<CustomField>
    <fullName>End_KM__c</fullName>
    <label>End KM</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>