force-app/main/default/objects/KM_Entry__c/fields/Location_from__c.field-meta.xml
<CustomField>
    <fullName>Location_from__c</fullName>
    <label>Location (From)</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>