force-app/main/default/objects/KM_Entry__c/fields/Location_To__c.field-meta.xml
<CustomField>
    <fullName>Location_To__c</fullName>
    <label>Location (To)</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>