force-app/main/default/objects/KM_Entry__c/fields/Reason_for_Travel__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Travel__c</fullName>
    <label>Reason for Travel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>