force-app/main/default/objects/KM_Entry__c/fields/Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Amount__c</fullName>
    <formula>Travelled__c * 0.72</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reimbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>