force-app/main/default/objects/KM_Entry__c/fields/Travelled__c.field-meta.xml
<CustomField>
    <fullName>Travelled__c</fullName>
    <formula>End_KM__c - Start_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>