force-app/main/default/objects/KM_Entry__c/validationRules/KM_check.validationRule-meta.xml
<ValidationRule>
    <fullName>KM_check</fullName>
    <active>true</active>
    <description>Make sure end ODO is greater than start ODO</description>
    <errorConditionFormula>Start_KM__c &gt; End_KM__c</errorConditionFormula>
    <errorMessage>Your end odometer reading cannot be lower than your start odometer reading</errorMessage>
</ValidationRule>