force-app/main/default/objects/KM_Entry__c/listViews/My_KM.listView-meta.xml
<ListView>
    <fullName>My_KM</fullName>
    <columns>NAME</columns>
    <columns>Travelled__c</columns>
    <columns>Reimbursement_Amount__c</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>My KM</label>
</ListView>